fix(acpidump): add arguments

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1082,7 +1082,7 @@
 			</dict>
 			<dict>
 				<key>Arguments</key>
-				<string></string>
+				<string>-b -n DSDT -z</string>
 				<key>Auxiliary</key>
 				<true/>
 				<key>Comment</key>
